fixed views on smaller screens

--- a/src/Degree.css
+++ b/src/Degree.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 3rem;
-    height: 100vh;
+    height: 90vh;
   }
 
   @media (max-width: 320px) {
@@ -67,7 +67,7 @@
 .additional {
     display: flex;
     justify-content: space-around;
-    gap: 1rem;
+    gap: 0.5rem;
     padding: 1.3rem;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 10px;
@@ -79,6 +79,7 @@
     .uvindex > p {
     padding-top: 0.4rem;
     font-weight: 400;
+    font-size: 0.9rem;
     }
     
     .humidity > h3,
